--- a/css/services.css
+++ b/css/services.css
@@ -106,6 +106,11 @@
     font-size: 2.5rem;
     font-weight: bold;
   }
+
+  .nav-logo,
+  .footer-logo {
+    width: 50%;
+  }
   
   .navbar-nav {
     text-align: center;
@@ -292,6 +297,13 @@ footer p {
 
     .container-nav {
       padding: 0 15%;
+    }
+
+    .navbar-brand {
+      display: inline;
+      width: 80%;
+      margin: 0;
+      text-align: left;
     }
   
     .nav-link {
