--- a/css/services.css
+++ b/css/services.css
@@ -6,6 +6,8 @@
     --color-secondary: #e64848;
     --color-grey: rgb(240, 240, 240);
     --color-dark-grey: #EEC1C8;
+    --color-header: rgb(160, 11, 11);
+    --color-footer: var(--color-header);
   }
   
   
@@ -69,7 +71,9 @@
   }
   
   .container-nav {
+    background-color: var(--color-header);
     padding: 0 5%;
+    border-bottom: 1px solid var(--color-dark-grey);
   }
   
 
@@ -218,7 +222,7 @@
   /* Footer Section */
 
 footer {
-  background-color: var(--color-primary);
+  background-color: var(--color-footer);
 }
 
 footer span, 
