--- a/css/services.css
+++ b/css/services.css
@@ -100,47 +100,50 @@
   
   
   /* Navigation Bar */
-  
-  .navbar {
-    z-index: 2;
-  }
-  
-  .navbar-brand {
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
 
-  .nav-logo,
-  .footer-logo {
-    width: 50%;
-  }
-  
-  .navbar-nav {
-    text-align: center;
-  }
-  
-  .nav-item {
-    padding: 0 18px;
-  }
-  
-  .nav-link {
-    font-family: "Montserrat-light";
-    font-size: 1.2rem;
-    color: white;
-    margin-bottom: 3px;
-  }
-  
-  .services-link {
-      border-bottom: 1px solid var(--color-dark-grey);
-  }
+.navbar {
+  z-index: 2;
+}
 
-  .nav-link:hover {
-    border-bottom: 1px solid var(--color-dark-grey);
-  }
-  
-  
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
 
+.nav-logo,
+.footer-logo {
+  width: 50%;
+}
+
+.navbar-nav {
+  text-align: left;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-family: "Montserrat-light";
+  font-size: 1.2rem;
+  color: white;
+  margin-bottom: 3px;
+  transition: all .3s;
+}
+
+.services-link {
+  border-bottom: 1px solid var(--color-dark-grey);
+}
+
+.fa-chevron-right {
+  color: var(--color-primary);
+  display: none;
+  font-size: 1.2rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+} 
+  
 
   
   
@@ -304,18 +307,55 @@ footer a {
     }
 
     .container-nav {
-      padding: 0 15%;
+      padding: 0;
     }
-
+  
+    .navbar {
+      padding: 0;
+    }
+  
     .navbar-brand {
       display: inline;
       width: 80%;
       margin: 0;
+      padding: 2% 0;
+      padding-left: 5%;
       text-align: left;
     }
   
-    .nav-link {
-      border: 1px dashed var(--color-secondary);
+    .navbar-toggler {
+      margin-right: 5%;
+      font-size: 1.8rem;
+    }
+  
+    .navbar-nav {
+      background-color: white;
+    }
+    
+    .navbar-dark .navbar-nav .nav-item {
+      padding: 0;
+    }
+  
+    .navbar-dark .navbar-nav .nav-link {
+      font-size: 1.4rem;
+      font-weight: 500;
+      border-top: 1px dashed gray;
+      color: black;
+      padding: 1rem 2rem;
+      margin: 0;
+    }
+  
+    .navbar-dark .navbar-nav .nav-link:hover {
+      color: var(--color-primary);
+    }
+  
+    .fa-chevron-right {
+      display: inline;
+    }
+
+    .navbar-dark .navbar-nav .services-link {
+      color: var(--color-primary);
+      border-bottom: none;
     }
   
     #title .big-heading {
