--- a/css/services.css
+++ b/css/services.css
@@ -109,6 +109,7 @@
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
+  text-align: left;
 }
 
 .nav-logo,
@@ -129,6 +130,11 @@
   font-size: 1.2rem;
   color: white;
   margin-bottom: 3px;
+  transition: all .3s;
+}
+
+.nav-link:hover {
+  border-bottom: 1px solid var(--color-dark-grey);
   transition: all .3s;
 }
 
