--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ p {
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
+  text-align: left;
 }
 
 .nav-logo,
@@ -138,6 +139,11 @@ p {
   font-size: 1.2rem;
   margin-right: 1rem;
   margin-bottom: 1rem;
+}
+
+.nav-link:hover {
+  border-bottom: 1px solid var(--color-dark-grey);
+  transition: all .3s;
 }
 
 
@@ -393,8 +399,78 @@ p {
 
 
 
+/* Clients Section */
+
+.img-card {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 90%;
+  height: 70%;
+  overflow: hidden;
+  border-radius: 4px;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+  transition: all .5s;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.img-card__img {
+  max-width: 100%;
+  max-height: 90%;
+  opacity: .7;
+}
+
+.img-card__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.img-card__text {
+  position: absolute;
+  text-align: left;
+  margin: 0 auto;
+  top: 100%;
+  color: #8f8f8f;
+}
+
+.img-card__text a {
+  color: #adacac;
+}
+
+.img-card:hover .img-card__overlay {
+  background-color: rgba(0,0,0,.85);
+  transition: opacity .3s ease;
+  opacity: 1;
+}
+.img-card:hover .img-card__text {
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all .5s ease;
+}
+
 
 /* Testimonial Section */
+
+#testimonials {
+ padding: 7% 0;
+}
+
+.line-testimonials {
+  width: 5%;
+  height: 2px;
+  background-color: currentColor;
+}
+
+.carousel-item {
+  padding: 0 15%;
+}
 
 .testimonial-text {
   font-size: 2rem;
@@ -674,7 +750,7 @@ footer a {
 
 }
 
-@media (max-width: 700px) {
+@media (max-width: 770px) {
 
   html {
     font-size: 50%; // 1rem = 8px; 8px/16px = 50%
@@ -782,6 +858,21 @@ footer a {
 
   .about__text {
     max-width: 100%;
+  }
+
+  .img-card {
+    width: 30rem;
+    height: 20rem;
+    margin-bottom: 3rem;
+  }
+  
+  .img-card__img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .img-card__text {
+    font-size: 1.4rem;
   }
 
   .content {
